--- a/src/main/resources/registro.html
+++ b/src/main/resources/registro.html
@@ -498,13 +498,13 @@
                     <div><span style="font-family: Arial, Helvetica, sans-serif; font-size: 8px;"  ><strong>M:</strong></span></div>
                 </td>
                 <td style="width: 5.15pt;border-width: 0.5pt; border-style: solid; border-color: rgb(0, 0, 0); vertical-align: middle; overflow-wrap: break-word; text-align: left;">
-                    <div><span style="font-family: Arial, Helvetica, sans-serif; font-size: 10px;" id="genRepresentante" ></span></div>
+                    <div><span style="font-family: Arial, Helvetica, sans-serif; font-size: 10px;" id="genRepresentanteM" ></span></div>
                 </td>
                 <td style="width: 1pt;border: none;">
                     <div><span style="font-family: Arial, Helvetica, sans-serif; font-size: 8px;"  ><strong>F:</strong></span></div>
                 </td>
                 <td style="width: 5.15pt;border-width: 0.5pt; border-style: solid; border-color: rgb(0, 0, 0); vertical-align: middle; overflow-wrap: break-word; text-align: left;">
-                    <div><span style="font-family: Arial, Helvetica, sans-serif; font-size: 10px;" id="genRepresentante" ></span></div>
+                    <div><span style="font-family: Arial, Helvetica, sans-serif; font-size: 10px;" id="genRepresentanteF" ></span></div>
                 </td>
             </tr>
         </tbody>
