--- a/src/main/resources/certificadoAccionesDeAnio.html
+++ b/src/main/resources/certificadoAccionesDeAnio.html
@@ -106,7 +106,7 @@
         <br>
         <br>
         <p class="subtitulos vendedor">
-            <strong>HACE CONSTAR QUE:</strong> <span id="nomAcc"></span>
+            HACE CONSTAR QUE:
             <br>
             <br>
             <br>
@@ -123,7 +123,7 @@
             Que revisados los archivos y libros de accionistas de la EEBP S.A E.S.P., el
             accionista <strong> <span id="nomAccionista"> </span> </strong>identificado
             con cédula de ciudadanía <strong>No. <span id="codUsuario"> </span> </strong> expedida en
-            <span id="munExpedicion"> </span>, a <span id="fecExpedicion"> </span> tiene
+            <span id="munExpedicion"> </span>, tiene
             registrado un total de <span id="numAcciones"></span> acciones con un valor nominal de $ <span
                 id="valorNominal"></span>.
             <br>
