--- a/src/main/resources/registro.html
+++ b/src/main/resources/registro.html
@@ -454,6 +454,13 @@
                 <td style="width: 14.15pt;border-width: 0.5pt; border-style: solid; border-color: rgb(0, 0, 0); vertical-align: middle; overflow-wrap: break-word; text-align: left;">
                     <div><span style="font-family: Arial, Helvetica, sans-serif; font-size: 10px;" id="tipoDocRepresentanteRC" ></span></div>
                 </td>
+                <td style="width: 21.25pt;border-top: none;border-bottom: none;border-left: none;border-image: initial;border-right: 1pt solid windowtext;">
+                    <div><span style="font-family: Arial, Helvetica, sans-serif; font-size: 8px;"  ><strong>NIT</strong></span></div>
+                </td>
+                <td style="width: 14.15pt;border-width: 0.5pt; border-style: solid; border-color: rgb(0, 0, 0); vertical-align: middle; overflow-wrap: break-word; text-align: left;">
+                    <div><span style="font-family: Arial, Helvetica, sans-serif; font-size: 10px;" id="tipoDocRepresentanteNIT" ></span></div>
+                </td>
+                <td style="width: 49.65pt;border-top: none;border-bottom: none;border-left: none;border-image: initial;border-right: 1pt solid windowtext;">
                 <td style="width: 49.65pt;border-top: none;border-bottom: none;border-left: none;border-image: initial;border-right: 1pt solid windowtext;">
                     <div><span style="font-family: Arial, Helvetica, sans-serif; font-size: 8px;"  ><strong>No.</strong></span></div>
                 </td>
