--- a/src/main/resources/formatoTituloAcciones.html
+++ b/src/main/resources/formatoTituloAcciones.html
@@ -178,7 +178,7 @@
                 <td></td>
 
                 <td style="padding-right: 5px;"><strong>POR $</strong></td>
-                <td class="celdas" style="width: 160px;" id="valAccTit2"></td>
+                <td class="celdas" style="width: 160px;" id="valAccTit"></td>
 
                 <td style="padding-right: 5px;"><strong>TITULO</strong></td>
                 <td class="celdas" style="width: 120px;" id="conseTitulo"></td>
@@ -221,7 +221,7 @@
         <table class="filas">
             <tr class="aFavor">
                 <td style="padding-right: 90px;"><strong>POR: </strong></td>
-                <td class="celdas" style="width: 240px; padding: 15px;" id="valor"></td>
+                <td class="celdas" style="width: 240px; padding: 15px;" id="valAccTit2"></td>
                 <td></td>
             </tr>
         </table>
