--- a/src/main/resources/formatoTituloAcciones.html
+++ b/src/main/resources/formatoTituloAcciones.html
@@ -23,7 +23,7 @@
         .infotitulo {
             display: flex;
             flex-direction: column;
-            margin-bottom: 60px;
+            margin-bottom: 30;
             margin-top: 45px;
             border: 2px solid rgb(66, 113, 155);
             border-radius: 65px;
