--- a/src/main/resources/formatoTituloAcciones.html
+++ b/src/main/resources/formatoTituloAcciones.html
@@ -221,7 +221,7 @@
         <table class="filas">
             <tr class="aFavor">
                 <td style="padding-right: 90px;"><strong>POR: </strong></td>
-                <td class="celdas" style="width: 240px; padding: 15px;" ></td>
+                <td class="celdas" style="width: 240px; padding: 15px;" id="valor"></td>
                 <td></td>
             </tr>
         </table>
