--- a/src/main/resources/formatoTituloAcciones.html
+++ b/src/main/resources/formatoTituloAcciones.html
@@ -220,8 +220,9 @@
         <!-- por  -->
         <table class="filas">
             <tr class="aFavor">
-                <td style="padding-right: 5px;"><strong>POR $</strong></td>
-                <td class="celdas" style="width: 160px;" id="valor"></td>
+                <td style="padding-right: 90px;"><strong>POR: </strong></td>
+                <td class="celdas" style="width: 240px; padding: 15px;" id="xxx"></td>
+                <td></td>
             </tr>
         </table>
 
