--- a/src/main/resources/formatoTituloAcciones.html
+++ b/src/main/resources/formatoTituloAcciones.html
@@ -235,7 +235,7 @@
                 <span id="firmaRepresentanteLegal"></span>
                 <h6 class="firmaR" id="firmaRepresentanteRepresentanteLegal">_________________________________________</h6>
                 <p><strong>Representante Legal</strong></p>
-
+                <p style="font-size: 7px;"><strong>Carrera 26 No. 10-68 Barrio El Carmen</strong></p>
             </div>
             <div class="firmaDerecha">
                 <span id="firmaDerecha"></span>
