--- a/src/main/resources/formatoTituloAcciones.html
+++ b/src/main/resources/formatoTituloAcciones.html
@@ -221,7 +221,7 @@
         <table class="filas">
             <tr class="aFavor">
                 <td style="padding-right: 90px;"><strong>POR: </strong></td>
-                <td class="celdas" style="width: 240px; padding: 15px;" id="valor"></td>
+                <td class="celdas" style="width: 240px; padding: 15px;" id="valor"><p style="font-size: 7px;"><strong>Carrera 26 No. 10-68 Barrio El Carmen</strong></p></td>
                 <td></td>
             </tr>
         </table>
