--- a/src/main/resources/formatoTituloAcciones.html
+++ b/src/main/resources/formatoTituloAcciones.html
@@ -220,7 +220,7 @@
         <!-- por  -->
         <table class="filas">
             <tr class="aFavor">
-                <td style="padding-right: 90px;"><strong>PORRRR: </strong></td>
+                <td style="padding-right: 90px;"><strong>POR: </strong></td>
                 <td class="celdas" style="width: 240px; padding: 15px;" id="valor"></td>
                 <td></td>
             </tr>
@@ -235,7 +235,6 @@
                 <span id="firmaRepresentanteLegal"></span>
                 <h6 class="firmaR" id="firmaRepresentanteRepresentanteLegal">_________________________________________</h6>
                 <p><strong>Representante Legal</strong></p>
-                <p style="font-size: 7px;"><strong>Carrera 26 No. 10-68 Barrio El Carmen</strong></p>
             </div>
             <div class="firmaDerecha">
                 <span id="firmaDerecha"></span>
@@ -266,12 +265,6 @@
                     empresa, transcurridos 15 días calendario si ésta <strong>NO</strong> las adquiere la oferta se
                     extenderá a los accionistas, si después de 5 días calendario los accionistas no la adquieren en la
                     última instancia La oferta se extenderá a un tercero. Salvo arreglos judiciales.<br>
-                    La enajenación de acciones se perfecciona por el simple acuerdo de las partes, pero para que este
-                    acto surta efecto con la relación a la sociedad y terceros, se requiere la inscripción en el libro
-                    de registro de accionistas, mediante orden escrita del enajenante o en virtud del endoso hecho en el
-                    titulo respectivo. Las acciones no pagadas en su integridad también podrán ser negociables, pero el
-                    suscriptor y los adquirentes subsiguientes serán solidariamente responsables por el importe no
-                    pagado de las mismas.
                 </p>
 
                 <p class="parrafo">
