--- a/src/main/resources/formatoTituloAcciones.html
+++ b/src/main/resources/formatoTituloAcciones.html
@@ -221,7 +221,7 @@
         <table class="filas">
             <tr class="aFavor">
                 <td style="padding-right: 90px;"><strong>POR: </strong></td>
-                <td class="celdas" style="width: 240px; padding: 15px;" id="valor"></td>
+                <td class="celdas" style="width: 240px; padding: 15px; visibility: hidden;" id="valor"></td>
                 <td></td>
             </tr>
         </table>
@@ -300,10 +300,7 @@
                     sociedad anotará los pagos efectuados y los saldos pendientes. Si la sociedad tuviere obligaciones
                     vencidas a cargo de los accionistas por concepto de cuotas de las acciones suscritas, optará a
                     elección de la Junta Directiva al cobro judicial o por vender por cuenta y riesgos del moroso y por
-                    el conducto de un comisionista, las acciones que hubiere suscrito o por imputar las sumas recibidas
-                    a la liberación del número de acciones que correspondan a las cuotas pagadas previa deducción de un
-                    veinte por ciento (20%) a título de indemnización de perjuicios que se presumirán causados. Las
-                    acciones que la sociedad retire al accionista moroso las colocará de inmediato.
+                    el conducto de un comisionista.
                 </p>
 
                 <p class="parrafo">
