--- a/src/main/resources/formatoTituloAcciones.html
+++ b/src/main/resources/formatoTituloAcciones.html
@@ -222,7 +222,7 @@
             <tr class="aFavor">
                 <td style="padding-right: 90px;"><strong>POR: </strong></td>
                 <td class="celdas" style="width: 240px; padding: 15px; visibility: hidden;" id="valor"></td>
-                <td></td>
+                <td class="celdas" style="width: 240px; padding: 15px;"> </td>
             </tr>
         </table>
 
