--- a/src/main/resources/formatoTituloAcciones.html
+++ b/src/main/resources/formatoTituloAcciones.html
@@ -177,7 +177,7 @@
                 <td class="celdas" style="width: 80px; padding: 15px;" id="numAcciones"></td>
                 <td></td>
 
-                <td style="padding-right: 5px;"><strong>POR $</strong></td>
+                <td style="padding-right: 5px;"><strong>POR</strong></td>
                 <td class="celdas" style="width: 160px;" id="valAccTit"></td>
 
                 <td style="padding-right: 5px;"><strong>TITULO</strong></td>
