--- a/src/main/resources/formatoTituloAcciones.html
+++ b/src/main/resources/formatoTituloAcciones.html
@@ -221,8 +221,7 @@
         <table class="filas">
             <tr class="aFavor">
                 <td style="padding-right: 90px;"><strong>POR: </strong></td>
-                <td class="celdas" style="width: 240px; padding: 15px; visibility: hidden;" id="valor"></td>
-                <td class="celdas" style="width: 240px; padding: 15px;">20000</td>
+                <td class="celdas" style="width: 480px; padding: 15px;" id="valorEnLetras" colspan="2"></td>
             </tr>
         </table>
 
